# Jsonrs

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  checksum-Elixir.Jsonrs.exs  mix.exs
.github/workflows/: ci.yml  release.yml
lib/: encoder.ex  jsonrs.ex
native/jsonrs/: Cargo.toml  Cross.toml  README.md
native/jsonrs/.cargo/: config
native/jsonrs/src/: compression.rs  lib.rs
test/: jsonrs_test.exs
