[package]
name = "jsonrs"
version = "0.3.3"
authors = []
edition = "2021"

[lib]
name = "jsonrs"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
flate2 = "1.0"
rustler = { version = "0.33.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-transcode = "1.1"
lazy_static = "1.0"
